# socratic-learning

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
dev-docs/: CHANGELOG.md  ai-project-init-standard.md  generic-python-project-standard.md  python-project-architecture-engineering-standard.md  v1.0-parchment-refactor.md
dev-docs/plans/: 2026-05-12-textbook-module.md
teacher/: book_revision_notes.md  diary.md  ganyu.md  keqing.md  learner_profile.md  march7.md  progress.md  session_archive.md  system.md  system_detail.md  wechat_group.md  wechat_unread.md
teacher/progress/: building-effective-agents.md  google-ai-agent-whitepapers.md
textbook/: building-effective-agents.md  registry.json  textbook_registry.md
textbook/google-ai-agent-whitepapers/: 01-introduction-to-agents.md  02-agent-tools-mcp.md
web/: config.py  error_handler.py  logging_config.py  migrate_registry.py  models.py  panels.py  post_lesson.py  prompt_builder.py  requirements-dev.txt  requirements.txt  server.py  state.py  textbook_importer.py  textbook_models.py  textbook_store.py  token_budget.py
web/socratic/adapters/api/: dependencies.py  lesson_routes.py  panel_routes.py  schemas.py  textbook_routes.py
web/socratic/app/: config.py  container.py
web/socratic/application/: lesson_service.py  panel_service.py  post_lesson_service.py  textbook_service.py
web/socratic/infrastructure/jobs/: __init__.py  impl.py  interface.py
web/socratic/infrastructure/llm/: __init__.py  errors.py  impl.py  interface.py
web/socratic/infrastructure/storage/: __init__.py  impl.py  interface.py
web/socratic/modules/lesson/: __init__.py  errors.py  impl.py  interface.py  models.py
web/socratic/modules/panels/: __init__.py  impl.py  interface.py
web/socratic/modules/prompt/: __init__.py  impl.py  interface.py  models.py
web/socratic/modules/teacher_profile/: __init__.py  impl.py  interface.py
web/socratic/modules/textbook/: __init__.py  errors.py  impl.py  interface.py  migrate_registry.py  models.py
web/socratic/tests/: test_runtime_regressions.py
web/socratic/tests/architecture/: test_import_boundaries.py
web/static/: index.html
web/tests/: test_config.py  test_error_handler.py  test_migrate_registry.py  test_panels.py  test_post_lesson.py  test_prompt_builder.py  test_state.py  test_textbook_importer.py  test_textbook_models.py  test_textbook_store.py
