[project]
name = "socratic-learning"
version = "0.1.0"
description = "苏格拉底·七 Web 家教系统"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.50.0",
    "tiktoken>=0.8.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "PyMuPDF>=1.24.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "RUF001", # ambiguous fullwidth chars in strings — intentional Chinese text
    "RUF002", # ambiguous fullwidth chars in docstrings — intentional Chinese text
]
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "web/backups",
    "web/conversations",
]

[tool.ruff.lint.per-file-ignores]
"web/server.py" = ["E402"]  # sys.path setup must precede imports
"web/socratic/tests/*.py" = ["UP028"]  # yield in test fixtures
"web/socratic/adapters/api/*.py" = ["B008"]  # FastAPI Form/File defaults
"web/socratic/modules/lesson/errors.py" = ["N818"]  # exception naming conventions
"web/socratic/modules/textbook/errors.py" = ["N818"]  # exception naming conventions

[tool.ruff.lint.isort]
known-first-party = ["socratic"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = false
files = [
    "web/server.py",
    "web/socratic",
]
exclude = [
    "web/backups",
    "web/conversations",
    ".pytest_cache",
    "web/tests",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["web/socratic/tests"]
pythonpath = ["web"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: unit tests (fast, no I/O)",
    "integration: integration tests (may use real services)",
    "slow: slow tests (LLM calls, PDF processing)",
]

[tool.coverage.run]
source = ["web"]
omit = ["web/tests/*", "web/socratic/tests/*", "web/backups/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
